--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %}</title>
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap');
+*{
+    margin: 0;
+    padding: 0;
+}
+body{
+    background-color: #1b1b1b;
+    color: #ffff;
+    font-family: 'Libre Baskerville', serif;
+}
+nav{
+    display: flex;
+    justify-content: space-between;
+    margin: 20px;
+    font-size: 20px;
+}
+.left{
+   
+    width: 200px;
+    cursor: pointer;
+    
+}
+.right a{
+    color: #ffff;
+    text-decoration: none;
+    width: 200px;
+}
+.acharya{
+    display: none;
+}
+.left:hover .acharya{
+    display: inline;
+}
+nav a{
+    color: #ffff;
+    text-decoration: none;
+}
+    </style>
     {% block css %}{% endblock %}
 </head>
 <body>
